fix: new balance history api added
